--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>br.com.testeSpring</groupId>
-	<artifactId>atividade04ES</artifactId>
+	<groupId>br.com.testeComSpring</groupId>
+	<artifactId>Lab04_spring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>atividade04ES</name>
 	<description>Demo project for Spring Boot using Junit</description>
@@ -51,8 +51,34 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        
+		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+     </dependency>
+        
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
