--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+# MYSQL
+spring.datasource.url=jdbc:mysql://localhost/sistema_frete?useSSL=false&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
+
+spring.datasource.username=root
+spring.datasource.password=
+
+# JPA-Hibernate
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
